# non-uvm-axi-lite-verification-ip

./: .gitignore  LICENSE  README.md
08_axi_master_slave_monitor/50_axi_pipelined_wr_out_of_order_rd/: axi_master.sv  axi_slave.sv  axi_testbench.sv  questa.tcl  questa2.tcl
08_axi_master_slave_monitor/51_axi_transaction/: axi_testbench.sv  questa.tcl
08_axi_master_slave_monitor/52_axi_master_no_resp/: axi_master.sv  axi_monitor.sv  axi_slave.sv  axi_testbench.sv  axi_transaction.sv
08_axi_master_slave_monitor/53_axi_master_resp/: axi_master.sv  axi_slave.sv  axi_testbench.sv
08_axi_master_slave_monitor/60_uvm_axi_testbench/: 01_clean.bash  02_simulate_rtl.bash  03_simulate_vcs.bash  04_simulate_xcelium.bash  README.md  axi_agent.sv  axi_driver.sv  axi_env.sv  axi_if.sv  axi_monitor.sv  axi_pkg.sv  axi_scoreboard.sv  axi_seq_item.sv  axi_sequencer.sv  axi_sequences.sv  axi_slave.sv  axi_tb_top.sv  axi_test.sv  filelist.f  questa.tcl
08_axi_master_slave_monitor/60_uvm_axi_testbench/eda_playground/: README.md  design.sv  testbench.sv
08_axi_master_slave_monitor/70_verilator_axi_testbench/: CMakeLists.txt  README.md  axi_slave.v  axi_tb.cpp
